# sonos-manager

./: Cargo.toml
examples/: browse.rs  discovery.rs  manager.rs  queue.rs  snapshot.rs  sonos.rs  speaker.rs
src/: content.rs  controller.rs  error.rs  lib.rs  mediasource.rs  metadata.rs  subscriber.rs  test.rs  types.rs  utils.rs  zoneaction.rs
src/controller/: zoneaction.rs
