[package]
name = "sonos-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
sonor = {version = "3.0.0-5", git="https://github.com/ryanolf/sonor", branch="manager2"}
tokio = { version = "1.0", features = ["sync", "time", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
fastrand = "1.5.0"
urlencoding = "2.1.0"
futures-util = "0.3.31"
thiserror = "1.0"
roxmltree = "0.18"

[dev-dependencies]
simple_logger = "5.0"